# cos-coordinated-workers

./: .gitignore  CODEOWNERS  README.md  pyproject.toml  spec.md  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: distributed-solutions-tests.yaml  pull-request.yaml  release.yaml  tiobe-scan.yaml
hacks/: fetch_charm_libs.sh
probes/: cluster_consistency.py
src/coordinated_workers/: __init__.py  coordinator.py  helpers.py  mesh_policy.py  nginx.py  service_mesh.py  telemetry_correlation.py  worker.py  worker_telemetry.py
src/coordinated_workers/interfaces/: __init__.py  cluster.py
tests/integration/: conftest.py  helpers.py  test_nginx_metrics.py  test_service_mesh.py  test_solution.py
tests/integration/testers/coordinator/: charmcraft.yaml  pyproject.toml  requirements.txt
tests/integration/testers/coordinator/lib/charms/istio_beacon_k8s/v0/: service_mesh.py
tests/integration/testers/coordinator/src/: charm.py  coordinator_config.py
tests/integration/testers/worker/: charmcraft.yaml
tests/integration/testers/worker/lib/charms/grafana_k8s/v0/: grafana_dashboard.py
tests/integration/testers/worker/src/: charm.py
tests/unit/: conftest.py  helpers.py  test_coordinator.py  test_coordinator_status.py  test_nginx.py  test_probes.py  test_roles_config.py  test_telemetry_correlation.py  test_worker.py  test_worker_status.py  test_worker_telemetry.py
tests/unit/resources/: bundle-reference.yaml  sample_litmus_conf_with_extra_http_variables.txt  sample_litmus_conf_with_rewrite.txt  sample_litmus_conf_with_tracing.txt  sample_litmus_missing_upstreams_conf.txt  sample_litmus_ssl_conf.txt  sample_loki_nginx_conf.txt  sample_loki_nginx_conf_tls.txt  sample_mimir_nginx_conf.txt  sample_mimir_nginx_conf_tls.txt  sample_tempo_nginx_conf.txt  sample_tempo_nginx_conf_root_path.txt  sample_tempo_nginx_conf_tls.txt
